# Ray-traching-course

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
Ray-tracing-1/: Ray-tracing-1.sln  Ray-tracing-1.vcxproj  rectangles.ppm  triangle.ppm
Ray-tracing-1/src/: main.cpp
src/: Accelerators.cpp  FileSystem.cpp  FileSystem.h  Framebuffer.cpp  Framebuffer.h  ImGui.h  Image.hpp  Mesh.cpp  Mesh.h  Module.h  Primitive.cpp  Primitive.h  RenderLog.h  Threading.hpp  Utils.hpp  Window.cpp  Window.h  main.cpp
